; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_vulkan.c_glfwGetRequiredInstanceExtensions.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_vulkan.c_glfwGetRequiredInstanceExtensions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }

@_GLFW_REQUIRE_LOADER = common dso_local global i32 0, align 4
@_glfw = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8** @glfwGetRequiredInstanceExtensions(i32* %0) #0 {
  %2 = alloca i8**, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = icmp ne i32* %4, null
  %6 = zext i1 %5 to i32
  %7 = call i32 @assert(i32 %6)
  %8 = load i32*, i32** %3, align 8
  store i32 0, i32* %8, align 4
  %9 = call i32 @_GLFW_REQUIRE_INIT_OR_RETURN(i32* null)
  %10 = load i32, i32* @_GLFW_REQUIRE_LOADER, align 4
  %11 = call i32 @_glfwInitVulkan(i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %1
  store i8** null, i8*** %2, align 8
  br label %24

14:                                               ; preds = %1
  %15 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 0), align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 0
  %17 = load i32, i32* %16, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %14
  store i8** null, i8*** %2, align 8
  br label %24

20:                                               ; preds = %14
  %21 = load i32*, i32** %3, align 8
  store i32 2, i32* %21, align 4
  %22 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 0), align 8
  %23 = bitcast i32* %22 to i8**
  store i8** %23, i8*** %2, align 8
  br label %24

24:                                               ; preds = %20, %19, %13
  %25 = load i8**, i8*** %2, align 8
  ret i8** %25
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @_GLFW_REQUIRE_INIT_OR_RETURN(i32*) #1

declare dso_local i32 @_glfwInitVulkan(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
